--- a/src/components/home/Sac/Sac.scss
+++ b/src/components/home/Sac/Sac.scss
@@ -10,11 +10,16 @@
             
             h1 {
                 margin-bottom: 22px;
+                text-transform: uppercase;
+                font-size: 20px;
+                text-align: center;
             }
             
             img {
                 border-radius: 8px;
                 width: 100%;
+                height: 150px;
+                object-fit: cover;
             }
     
             h3 {
@@ -56,26 +61,33 @@
 }
 
 @media (max-width: 1023px) {
-    .sac-container {
-        gap: 32px !important;
-        
-        .sac-item {
-            padding: 0 !important;
-            border: none !important;
-
-            div img {
-                display: none;
-            } 
+    .sac {
+        .sac-container {
+            gap: 32px;
+            
+            .sac-item {
+                padding: 0;
+                border: none;
+    
+                div img {
+                    display: none;
+                } 
+            }
         }
     }
 }
 
 @media (max-width: 767px) {
-    .sac-container {
-        flex-direction: column;
-        
-        .sac-item {
-            width: 100% !important;
+    .sac {
+        .sac-container {
+            flex-direction: column;
+            
+            .sac-item {
+                width: 100%;
+                img {
+                    height: unset;
+                }
+            }
         }
     }
 }
