lazy load image and config file extention to webp

--- a/src/components/Pages/CategoryPage/CategoryPage.scss
+++ b/src/components/Pages/CategoryPage/CategoryPage.scss
@@ -1,7 +1,8 @@
 .cate-page {
-    margin-top: var(--header-height);
+    padding-top: 0;
     .cate-page-wrap {
         display: flex;
+        margin-top: 32px !important;
 
         .cate-page-content {
             width: 65%;
