--- a/src/components/home/Sac/Sac.scss
+++ b/src/components/home/Sac/Sac.scss
@@ -7,12 +7,17 @@
             width: 33%;
             padding: 36px 40px;
             border: 1px solid #eaeaea;
+            margin-bottom: 32px;
             
             h1 {
                 margin-bottom: 22px;
                 text-transform: uppercase;
                 font-size: 20px;
                 text-align: center;
+            }
+
+            span {
+                display: unset !important;
             }
             
             img {
@@ -30,7 +35,6 @@
                 margin: 19px 0;  
                 display: flex;
                 align-items: center;
-                gap: 20px;
     
                 img {
                     width: 80px;
@@ -40,6 +44,7 @@
     
                 h4 {
                     flex: 1;
+                    margin-left: 20px;
                     a {
                         font-size: 18px;
                     }
@@ -47,7 +52,6 @@
             }
             a {
                 display: inline-block;
-                margin-top: 19px;
                 color: var(--black-color);
                 font-size: 16px;
                 font-weight: 700; 
@@ -55,6 +59,9 @@
                 &:hover {
                     color: var(--primary-hover-color);
                 }
+            }
+            .see-more {
+                margin-top: 20px;
             }
         }
     }
