--- a/src/components/home/GodWordWork/GodWordWord.scss
+++ b/src/components/home/GodWordWork/GodWordWord.scss
@@ -1,7 +1,6 @@
 .gww {
     .gww-container {
         display: flex;
-        gap: 60px;
     
         .gww-blogger-featured {
             flex: 2;
@@ -11,7 +10,7 @@
                 border-radius: 12px;
             }
             h4 {
-                margin-top: 25px;
+                margin-top: 18px;
                 a {
                     color:var(--black-color);
                     font-weight: 700;
@@ -37,11 +36,11 @@
             flex: 2;
             display: flex;
             flex-direction: column;
-            gap: 25px;
+            margin-left: 60px;
     
             .gww-item {
                 display: flex;
-                gap: 32px;
+                margin-bottom: 25px;
     
                 .gww-item-link {
                     img {
@@ -56,6 +55,7 @@
     
                 .gww-item-content {
                     flex: 1;
+                    margin-left: 32px;
                     h4 {
                         a {
                             display: block;
@@ -88,6 +88,10 @@
     .gww {
         .gww-container {
             flex-direction: column;
+            .gww-list {
+                margin-left: 0;
+                margin-top: 60px;
+            }
         }
     }
 }
@@ -99,10 +103,16 @@
             .gww-list {
                 .gww-item {
                     flex-direction: column;
+                    margin-bottom: 42px;
                     .gww-item-link {
                         img {
                             width: 100%;
                         }
+
+                    }
+                    .gww-item-content {
+                        margin-left: 0;
+                        margin-top: 18px;
                     }
                 }
             }
