--- a/src/components/home/Witness/Witness.scss
+++ b/src/components/home/Witness/Witness.scss
@@ -4,6 +4,7 @@
     .witness-item {
         padding: 0 12px;
         width: 25%;
+        margin-bottom: 32px;
 
         .witness-item-link {
             img {
@@ -28,9 +29,12 @@
             margin-bottom: 8px;
         }
 
-        p {
+        .less-content {
             font-size: 17px;
             color: var(--text-color);
+            margin-bottom: 8px;
+            height: 60px;
+            overflow: hidden;
         }
         span {
             font-size: 13px;
@@ -45,7 +49,6 @@
             flex-wrap: wrap;
             .witness-item {
                 width: 50%;
-                margin-bottom: 12px;
             }
         }
     }
@@ -57,7 +60,6 @@
             flex-wrap: wrap;
             .witness-item {
                 width: 100%;
-                margin-bottom: 32px;
             }
         }
     }
