--- a/src/components/Pages/Single/Singgle.scss
+++ b/src/components/Pages/Single/Singgle.scss
@@ -20,11 +20,10 @@
 
 .single-container {
     display: flex;
-    gap: 50px;
     padding-bottom: 70px;
 
     .single-container-main {
-        flex: 3.5;
+        flex: 3;
         .single-content {
             margin-bottom: 50px;
             .single-desc {
@@ -184,7 +183,10 @@
                     width: 50%;
 
                     display: flex;
-                    gap: 8px;
+
+                    .mini-post-img, .post-content {
+                        padding: 4px;
+                    }
 
                     img {
                         width: 110px;
@@ -205,6 +207,7 @@
 
     .aside {
         flex: 1;
+        margin-left: 50px;
         padding-left: 50px;
         border-left: 1px solid rgba(51,51,51,.12);
         
@@ -261,9 +264,9 @@
 
                 .presscore-blog-posts-item {
                     display: flex;
-                    gap: 12px;
-                    padding: 8px 0;
                     a {
+                        display: inline-block;
+                        padding: 4px;
                         img {
                             width: 84px;
                             height: 60px;
@@ -272,10 +275,10 @@
                     }
 
                     .post-content {
+                        padding: 4px;
                         a {
                             display: block;
                             line-height: 1.6;
-                            display: -webkit-box;
                         }
                         time {
                             font-size: 13px;
@@ -292,7 +295,7 @@
         flex-direction: column;
 
         .aside {
-            border: none;
+            border: none;margin-top: 50px;
         }
     }
 }
