--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -16,6 +16,7 @@
         }
         .footer-map {
             width: 100%;
+            overflow: hidden;
         }
 
         .footer-logo-link {
