--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -26,6 +26,9 @@
         text-align: center;
         color: var(--white-color);
 
+        .header-logo {
+            height: 52px;
+        }
         .header-action {
 
             .btn-ellipsis {
