--- a/src/components/Pages/CategoryPage/CategoryPage.css
+++ b/src/components/Pages/CategoryPage/CategoryPage.css
@@ -33,7 +33,7 @@
             border-radius: 12px;
             height: 200px;
             object-fit: cover; }
-          .cate-page .cate-page-wrap .cate-page-content .cate-page-content-list .content-item .content-desc p {
+          .cate-page .cate-page-wrap .cate-page-content .cate-page-content-list .content-item .content-desc div {
             font-size: 15px;
             color: #6c6f72;
             margin: 8px 0;
@@ -44,8 +44,11 @@
             -webkit-box-orient: vertical;
             overflow: hidden;
             text-overflow: ellipsis; }
-            .cate-page .cate-page-wrap .cate-page-content .cate-page-content-list .content-item .content-desc p time {
-              font-size: 13px; }
+          .cate-page .cate-page-wrap .cate-page-content .cate-page-content-list .content-item .content-desc p {
+            margin-bottom: 12px; }
+            .cate-page .cate-page-wrap .cate-page-content .cate-page-content-list .content-item .content-desc p .time {
+              font-size: 12px;
+              color: #adadad; }
           .cate-page .cate-page-wrap .cate-page-content .cate-page-content-list .content-item .content-desc .readmore-btn {
             display: inline-block;
             background-color: var(--primary-color);
