--- a/src/components/Pages/CategoryPage/CategoryPage.scss
+++ b/src/components/Pages/CategoryPage/CategoryPage.scss
@@ -44,6 +44,9 @@
                     }
     
                     .content-desc {
+                        h1 {
+                            font-size: 20px;
+                        }
                         div {
                             font-size: 15px;
                             color: #6c6f72;
@@ -74,6 +77,7 @@
                             border: none;
                             cursor: pointer;
                             font-weight: 500;
+                            font-size: 13px;
     
                             &:hover {
                                 background-color: var(--primary-hover-color);
