--- a/src/components/globalStyle/GlobalStyle.scss
+++ b/src/components/globalStyle/GlobalStyle.scss
@@ -5,8 +5,8 @@
     --white-color: #fff;
     --black-color: #000;
 
-    --primary-color: #ba8a56;
-    --primary-hover-color: #e9ac6b;
+    --primary-color: #3c6997;
+    --primary-hover-color: #6499ce;
     --text-color: #6c6f72;
 
     --header-height: 56px;
