--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,7 @@
 
 .header {
   position: fixed;
-  background-color: rgba(45, 45, 45, 0.98);
+  background-color: var(--primary-color);
   height: var(--header-height);
   display: flex;
   align-items: center;
@@ -39,7 +39,7 @@
         position: absolute;
         top: var(--header-height);
         right: -20px;
-        background-color: var(--black-color) !important;
+        background-color: var(--primary-color) !important;
         display: block;
         z-index: 999;
         padding: 20px 30px;
@@ -153,7 +153,7 @@
       position: absolute;
       top: var(--header-height);
       left: -20px;
-      background-color: var(--black-color) !important;
+      background-color: var(--primary-color) !important;
       display: block;
       z-index: 999;
       padding: 20px 30px;
