--- a/src/css/components/home/GodWordWork/GodWordWord.css
+++ b/src/css/components/home/GodWordWork/GodWordWord.css
@@ -1,59 +1,61 @@
 @charset "UTF-8";
-.gww .gww-container {
-  display: flex; }
-  .gww .gww-container .gww-blogger-featured {
-    flex: 2; }
-    .gww .gww-container .gww-blogger-featured img {
-      width: 100%;
-      border-radius: 12px; }
-    .gww .gww-container .gww-blogger-featured h4 {
-      margin-top: 18px; }
-      .gww .gww-container .gww-blogger-featured h4 a {
-        color: var(--black-color);
-        font-weight: 700;
-        font-size: 26px; }
-      .gww .gww-container .gww-blogger-featured h4:hover a {
-        color: var(--primary-hover-color); }
-    .gww .gww-container .gww-blogger-featured p {
-      margin-top: 9px;
-      font-size: 18px;
-      color: var(--text-color);
-      line-height: 1.6; }
-  .gww .gww-container .gww-list {
-    flex: 2;
-    display: flex;
-    flex-direction: column;
-    margin-left: 60px; }
-    .gww .gww-container .gww-list .gww-item {
-      display: flex;
-      margin-bottom: 25px; }
-      .gww .gww-container .gww-list .gww-item .gww-item-link img {
-        width: 202px;
+.gww {
+  margin-bottom: 60px !important; }
+  .gww .gww-container {
+    display: flex; }
+    .gww .gww-container .gww-blogger-featured {
+      flex: 2; }
+      .gww .gww-container .gww-blogger-featured img {
+        width: 100%;
         border-radius: 12px; }
-      .gww .gww-container .gww-list .gww-item .gww-item-link:hover {
-        color: var(--primary-hover-color); }
-      .gww .gww-container .gww-list .gww-item .gww-item-content {
-        flex: 1;
-        margin-left: 32px; }
-        .gww .gww-container .gww-list .gww-item .gww-item-content h4 {
-          margin-bottom: 8px; }
-          .gww .gww-container .gww-list .gww-item .gww-item-content h4 a {
-            display: block;
-            width: 100%;
-            font-size: 21px;
-            line-height: 24px;
-            color: var(--black-color);
-            font-weight: 700; }
-        .gww .gww-container .gww-list .gww-item .gww-item-content p {
-          font-size: 18px;
-          color: var(--text-color);
-          line-height: 1.6;
-          display: -webkit-box;
-          -webkit-line-clamp: 2;
-          /* số dòng hiển thị */
-          -webkit-box-orient: vertical;
-          overflow: hidden;
-          text-overflow: ellipsis; }
+      .gww .gww-container .gww-blogger-featured h4 {
+        margin-top: 18px; }
+        .gww .gww-container .gww-blogger-featured h4 a {
+          color: var(--black-color);
+          font-weight: 700;
+          font-size: 26px; }
+        .gww .gww-container .gww-blogger-featured h4:hover a {
+          color: var(--primary-hover-color); }
+      .gww .gww-container .gww-blogger-featured p {
+        margin-top: 9px;
+        font-size: 18px;
+        color: var(--text-color);
+        line-height: 1.6; }
+    .gww .gww-container .gww-list {
+      flex: 2;
+      display: flex;
+      flex-direction: column;
+      margin-left: 60px; }
+      .gww .gww-container .gww-list .gww-item {
+        display: flex;
+        margin-bottom: 25px; }
+        .gww .gww-container .gww-list .gww-item .gww-item-link img {
+          width: 202px;
+          border-radius: 12px; }
+        .gww .gww-container .gww-list .gww-item .gww-item-link:hover {
+          color: var(--primary-hover-color); }
+        .gww .gww-container .gww-list .gww-item .gww-item-content {
+          flex: 1;
+          margin-left: 32px; }
+          .gww .gww-container .gww-list .gww-item .gww-item-content h4 {
+            margin-bottom: 8px; }
+            .gww .gww-container .gww-list .gww-item .gww-item-content h4 a {
+              display: block;
+              width: 100%;
+              font-size: 21px;
+              line-height: 24px;
+              color: var(--black-color);
+              font-weight: 700; }
+          .gww .gww-container .gww-list .gww-item .gww-item-content p {
+            font-size: 18px;
+            color: var(--text-color);
+            line-height: 1.6;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            /* số dòng hiển thị */
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis; }
 
 @media (max-width: 1023px) {
   .gww .gww-container {
